frame_webapp_test/src/main/webapp/error/403.jsp
<%@ page pageEncoding="UTF-8"%><% 
	response.addHeader("__forbidden","true");
%>
您试图进行未授权操作，可能你的权限已经被收回,请重新进入系统。
<a href='index.do'>重新进入</a>